add images to consultant section

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
             <div class="bg-layer"></div>
             <div class="auto-container">
                 <div class="sec-title text-center">
-                    <span class="sub-title">Training & Certification</span>
+                    <span class="sub-title">Immigration Consultants</span>
                     <h2>Get the Immigration <br> Consultants.</h2>
                 </div>
 
@@ -493,11 +493,11 @@
                             <div class="inner-box">
                                 <div class="image-box">
                                     <figure class="image"><a href="page-course-details.html"><img
-                                                src="images/resource/course-1.jpg" alt=""></a></figure>
+                                                src="assets/img/consultants/visa_immigration.webp" alt=""></a></figure>
                                     <div class="info-box">
                                         <h5 class="title"><a href="page-course-details.html">Citizenship Test</a></h5>
                                         <a href="page-course-details.html" class="read-more"><i
-                                                class="fa fa-long-arrow-alt-right"></i></a>
+                                                class="bi bi-arrow-right"></i></a>
                                     </div>
                                 </div>
                                 <div class="overlay-content">
@@ -505,7 +505,7 @@
                                         <h5 class="title"><a href="page-course-details.html">Citizenship Test</a></h5>
                                         <div class="text">The Human Rights and Democracy Study Visa Programms</div>
                                         <a href="page-course-details.html" class="read-more"><i
-                                                class="fa fa-long-arrow-alt-right"></i></a>
+                                                class="bi bi-arrow-right"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -516,11 +516,11 @@
                             <div class="inner-box">
                                 <div class="image-box">
                                     <figure class="image"><a href="page-course-details.html"><img
-                                                src="images/resource/course-2.jpg" alt=""></a></figure>
+                                                src="assets/img/consultants/tax-advantages.webp" alt=""></a></figure>
                                     <div class="info-box">
                                         <h5 class="title"><a href="page-course-details.html">Take IELTS</a></h5>
                                         <a href="page-course-details.html" class="read-more"><i
-                                                class="fa fa-long-arrow-alt-right"></i></a>
+                                                class="bi bi-arrow-right"></i></a>
                                     </div>
                                 </div>
                                 <div class="overlay-content">
@@ -528,7 +528,7 @@
                                         <h5 class="title"><a href="page-course-details.html">Take IELTS</a></h5>
                                         <div class="text">The Human Rights and Democracy Study Visa Programms</div>
                                         <a href="page-course-details.html" class="read-more"><i
-                                                class="fa fa-long-arrow-alt-right"></i></a>
+                                                class="bi bi-arrow-right"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -539,11 +539,11 @@
                             <div class="inner-box">
                                 <div class="image-box">
                                     <figure class="image"><a href="page-course-details.html"><img
-                                                src="images/resource/course-3.jpg" alt=""></a></figure>
+                                                src="assets/img/consultants/programs.webp" alt=""></a></figure>
                                     <div class="info-box">
                                         <h5 class="title"><a href="page-course-details.html">PTE Coaching</a></h5>
                                         <a href="page-course-details.html" class="read-more"><i
-                                                class="fa fa-long-arrow-alt-right"></i></a>
+                                                class="bi bi-arrow-right"></i></a>
                                     </div>
                                 </div>
                                 <div class="overlay-content">
@@ -551,7 +551,7 @@
                                         <h5 class="title"><a href="page-course-details.html">PTE Coaching</a></h5>
                                         <div class="text">The Human Rights and Democracy Study Visa Programms</div>
                                         <a href="page-course-details.html" class="read-more"><i
-                                                class="fa fa-long-arrow-alt-right"></i></a>
+                                                class="bi bi-arrow-right"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -562,11 +562,11 @@
                             <div class="inner-box">
                                 <div class="image-box">
                                     <figure class="image"><a href="page-course-details.html"><img
-                                                src="images/resource/course-4.jpg" alt=""></a></figure>
+                                                src="assets/img/consultants/family.webp" alt=""></a></figure>
                                     <div class="info-box">
                                         <h5 class="title"><a href="page-course-details.html">TOEFL Coaching</a></h5>
                                         <a href="page-course-details.html" class="read-more"><i
-                                                class="fa fa-long-arrow-alt-right"></i></a>
+                                                class="bi bi-arrow-right"></i></a>
                                     </div>
                                 </div>
                                 <div class="overlay-content">
@@ -574,7 +574,7 @@
                                         <h5 class="title"><a href="page-course-details.html">TOEFL Coaching</a></h5>
                                         <div class="text">The Human Rights and Democracy Study Visa Programms</div>
                                         <a href="page-course-details.html" class="read-more"><i
-                                                class="fa fa-long-arrow-alt-right"></i></a>
+                                                class="bi bi-arrow-right"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -716,7 +716,7 @@
                         <div class="footer-column col-xl-3 col-lg-4">
                             <div class="footer-widget about-widget">
                                 <h5 class="widget-title">Contact</h5>
-                                <div class="text">66 Road Broklyn Street, 600 <br>New York, USA</div>
+                                <div class="text">Amman <br>, Jordan</div>
                                 <ul class="contact-info">
                                     <li><i class="bi bi-envelope"></i> <a
                                             href="mailto:info@northimmigration.com">info@northimmigration.com</a><br>
@@ -770,27 +770,16 @@
                         <!--Footer Column-->
                         <div class="footer-column col-xl-3 col-lg-4 col-md-6">
                             <div class="footer-widget gallery-widget">
-                                <h5 class="widget-title">Gallery</h5>
+                                <h5 class="widget-title">More Links</h5>
                                 <div class="widget-content">
                                     <div class="outer clearfix">
-                                        <figure class="image">
-                                            <a href="#"><img src="images/resource/project-thumb-1.jpg" alt=""></a>
-                                        </figure>
-                                        <figure class="image">
-                                            <a href="#"><img src="images/resource/project-thumb-2.jpg" alt=""></a>
-                                        </figure>
-                                        <figure class="image">
-                                            <a href="#"><img src="images/resource/project-thumb-3.jpg" alt=""></a>
-                                        </figure>
-                                        <figure class="image">
-                                            <a href="#"><img src="images/resource/project-thumb-4.jpg" alt=""></a>
-                                        </figure>
-                                        <figure class="image">
-                                            <a href="#"><img src="images/resource/project-thumb-5.jpg" alt=""></a>
-                                        </figure>
-                                        <figure class="image">
-                                            <a href="#"><img src="images/resource/project-thumb-6.jpg" alt=""></a>
-                                        </figure>
+                                        <ul class="user-links">
+                                            <li><a href="#">PR Applicants</a></li>
+                                            <li><a href="#">Visa Consultancy</a></li>
+                                            <li><a href="#">Travel Insurance</a></li>
+                                            <li><a href="#">Work Permits</a></li>
+                                            <li><a href="#">Abroad Study</a></li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
