--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <link href="assets/css/main/responsive.css" rel="stylesheet">
     <link href="assets/css/main/global.css" rel="stylesheet">
     <link href="assets/css/main/core.css" rel="stylesheet">
+    <link href="assets/css/sections/about.css" rel="stylesheet">
+    <link href="assets/css/sections/countries.css" rel="stylesheet">
+    <link href="assets/css/sections/faq.css" rel="stylesheet">
+    <link href="assets/css/sections/feature.css" rel="stylesheet">
+    <link href="assets/css/sections/gallery.css" rel="stylesheet">
 
     <!-- meta tag -->
     <link rel="shortcut icon" href="assets/img/main/favicon.ico" type="image/x-icon">
