add pages about us contact us partner

--- a/index-rtl.html
+++ b/index-rtl.html
@@ -183,7 +183,7 @@
 						<a href="#" class="theme-btn btn-style-one bg-theme-color3"><span class="btn-title">احجز استشارة</span></a>
 
 						<!-- Mobile Nav toggler -->
-						<div class="mobile-nav-toggler"><span class="icon lnr-icon-bars"></span></div>
+						<div class="mobile-nav-toggler"><span class="bi bi-list"></span></div>
 					</div>
 				</div>
 			</div>
@@ -198,7 +198,7 @@
 			<nav class="menu-box">
 				<div class="upper-box">
 					<div class="nav-logo"><a href="index.html"><img src="images/logo-2.png" alt="" title=""></a></div>
-					<div class="close-btn"><i class="icon fa fa-times"></i></div>
+					<div class="close-btn"><i class="bi bi-x-lg"></i></div>
 				</div>
 
 				<ul class="navigation clearfix">
@@ -278,7 +278,7 @@
 						</nav><!-- Main Menu End-->
 
 						<!--Mobile Navigation Toggler-->
-						<div class="mobile-nav-toggler"><span class="icon lnr-icon-bars"></span></div>
+						<div class="mobile-nav-toggler"><span class="bi bi-list"></span></div>
 					</div>
 				</div>
 			</div>
@@ -547,14 +547,14 @@
 						<div class="row">
 							<div class="about-block col-lg-6 col-md-6">
 								<div class="inner">
-									<i class="icon flaticon-worldwide"></i>
+									<i class="icon bi bi-pass"></i>
 									<h5 class="title">أفضل هجرة<br> موارد</h5>
 								</div>
 							</div>
 
 							<div class="about-block col-lg-6 col-md-6">
 								<div class="inner">
-									<i class="icon flaticon-passport-16"></i>
+									<i class="icon icon bi bi-pass-fill"></i>
 									<h5 class="title">تأشيرات العودة <br>متوفر</h5>
 								</div>
 							</div>
@@ -700,12 +700,12 @@
 					<div class="inner-box">
 						<div class="image-box">
 							<figure class="image"><a href="page-service-details.html"><img src="images/resource/service-1.jpg" alt=""></a></figure>
-							<div class="icon-box"><i class="icon fa fa-graduation-cap"></i></div>
+							<div class="icon-box"><i class="icon bi bi-arrow-right"></i></div>
 						</div>
 						<div class="content-box">
 							<h5 class="title"><a href="page-service-details.html">تأشيرة طالب</a></h5>
 							<div class="text">ويلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها. ولذلك يتم استخدام طريقة </div>
-							<a href="page-service-details.html" class="read-more">اقرأ أكثر <i class="fa fa-long-arrow-alt-right"></i></a>
+							<a href="page-service-details.html" class="read-more">اقرأ أكثر <i class="bi bi-arrow-right"></i></a>
 						</div>
 					</div>
 				</div>
@@ -720,7 +720,7 @@
 						<div class="content-box">
 							<h5 class="title"><a href="page-service-details.html">تأشيرة عائلية</a></h5>
 							<div class="text">ويلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها. ولذلك يتم استخدام طريقة </div>
-							<a href="page-service-details.html" class="read-more">اقرأ أكثر <i class="fa fa-long-arrow-alt-right"></i></a>
+							<a href="page-service-details.html" class="read-more">اقرأ أكثر <i class="bi bi-arrow-right"></i></a>
 						</div>
 					</div>
 				</div>
@@ -735,7 +735,7 @@
 						<div class="content-box">
 							<h5 class="title"><a href="page-service-details.html">تأشيرة سياحية</a></h5>
 							<div class="text">ويلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها. ولذلك يتم استخدام طريقة </div>
-							<a href="page-service-details.html" class="read-more">اقرأ أكثر <i class="fa fa-long-arrow-alt-right"></i></a>
+							<a href="page-service-details.html" class="read-more">اقرأ أكثر <i class="bi bi-arrow-right"></i></a>
 						</div>
 					</div>
 				</div>
@@ -929,7 +929,7 @@
 					<!-- Counter block-->
 					<div class="counter-block col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
 						<div class="inner">
-							<i class="icon flaticon-passport-16"></i>
+							<i class="icon icon bi bi-pass-fill"></i>
 							<div class="count-box"><span class="count-text" data-speed="3000" data-stop="30">0</span>+</div>
 							<h6 class="counter-title">فئات التأشيرات</h6>
 						</div>
@@ -1000,21 +1000,21 @@
 							<i class="icon flaticon-job-interview"></i>
 							<span class="sub-title">فائدة 01</span>
 							<h4 class="title">المقابلات المباشرة عبر الإنترنت</h4>
-							<a href="page-about.html" class="read-more"><i class="fa fa-long-arrow-alt-right"></i></a>
+							<a href="page-about.html" class="read-more"><i class="bi bi-arrow-right"></i></a>
 						</div>
 
 						<div class="info-box">
 							<i class="icon flaticon-approved-1"></i>
 							<span class="sub-title">فائدة 02</span>
 							<h4 class="title">عملية سريعة وسهلة</h4>
-							<a href="page-about.html" class="read-more"><i class="fa fa-long-arrow-alt-right"></i></a>
+							<a href="page-about.html" class="read-more"><i class="bi bi-arrow-right"></i></a>
 						</div>
 
 						<div class="info-box">
-							<i class="icon flaticon-passport-16"></i>
+							<i class="icon icon bi bi-pass-fill"></i>
 							<span class="sub-title">فائدة 03</span>
 							<h4 class="title">99٪ الموافقة على التأشيرة</h4>
-							<a href="page-about.html" class="read-more"><i class="fa fa-long-arrow-alt-right"></i></a>
+							<a href="page-about.html" class="read-more"><i class="bi bi-arrow-right"></i></a>
 						</div>
 					</div>
 				</div>
@@ -1052,14 +1052,14 @@
 								<figure class="image"><a href="page-course-details.html"><img src="images/resource/course-1.jpg" alt=""></a></figure>
 								<div class="info-box">
 									<h5 class="title"><a href="page-course-details.html">اختبار المواطنة</a></h5>
-									<a href="page-course-details.html" class="read-more"><i class="fa fa-long-arrow-alt-right"></i></a>
+									<a href="page-course-details.html" class="read-more"><i class="bi bi-arrow-right"></i></a>
 								</div>
 							</div>
 							<div class="overlay-content">
 								<div class="info-box">
 									<h5 class="title"><a href="page-course-details.html">اختبار المواطنة</a></h5>
 									<div class="text">برامج تأشيرات دراسة حقوق الإنسان والديمقراطية</div>
-									<a href="page-course-details.html" class="read-more"><i class="fa fa-long-arrow-alt-right"></i></a>
+									<a href="page-course-details.html" class="read-more"><i class="bi bi-arrow-right"></i></a>
 								</div>
 							</div>
 						</div>
@@ -1072,14 +1072,14 @@
 								<figure class="image"><a href="page-course-details.html"><img src="images/resource/course-2.jpg" alt=""></a></figure>
 								<div class="info-box">
 									<h5 class="title"><a href="page-course-details.html">خذ IELTS</a></h5>
-									<a href="page-course-details.html" class="read-more"><i class="fa fa-long-arrow-alt-right"></i></a>
+									<a href="page-course-details.html" class="read-more"><i class="bi bi-arrow-right"></i></a>
 								</div>
 							</div>
 							<div class="overlay-content">
 								<div class="info-box">
 									<h5 class="title"><a href="page-course-details.html">خذ IELTS</a></h5>
 									<div class="text">برامج تأشيرات دراسة حقوق الإنسان والديمقراطية</div>
-									<a href="page-course-details.html" class="read-more"><i class="fa fa-long-arrow-alt-right"></i></a>
+									<a href="page-course-details.html" class="read-more"><i class="bi bi-arrow-right"></i></a>
 								</div>
 							</div>
 						</div>
@@ -1092,14 +1092,14 @@
 								<figure class="image"><a href="page-course-details.html"><img src="images/resource/course-3.jpg" alt=""></a></figure>
 								<div class="info-box">
 									<h5 class="title"><a href="page-course-details.html">تدريب PTE</a></h5>
-									<a href="page-course-details.html" class="read-more"><i class="fa fa-long-arrow-alt-right"></i></a>
+									<a href="page-course-details.html" class="read-more"><i class="bi bi-arrow-right"></i></a>
 								</div>
 							</div>
 							<div class="overlay-content">
 								<div class="info-box">
 									<h5 class="title"><a href="page-course-details.html">تدريب PTE</a></h5>
 									<div class="text">برامج تأشيرات دراسة حقوق الإنسان والديمقراطية</div>
-									<a href="page-course-details.html" class="read-more"><i class="fa fa-long-arrow-alt-right"></i></a>
+									<a href="page-course-details.html" class="read-more"><i class="bi bi-arrow-right"></i></a>
 								</div>
 							</div>
 						</div>
@@ -1112,14 +1112,14 @@
 								<figure class="image"><a href="page-course-details.html"><img src="images/resource/course-4.jpg" alt=""></a></figure>
 								<div class="info-box">
 									<h5 class="title"><a href="page-course-details.html">تدريب TOEFL</a></h5>
-									<a href="page-course-details.html" class="read-more"><i class="fa fa-long-arrow-alt-right"></i></a>
+									<a href="page-course-details.html" class="read-more"><i class="bi bi-arrow-right"></i></a>
 								</div>
 							</div>
 							<div class="overlay-content">
 								<div class="info-box">
 									<h5 class="title"><a href="page-course-details.html">تدريب TOEFL</a></h5>
 									<div class="text">برامج تأشيرات دراسة حقوق الإنسان والديمقراطية</div>
-									<a href="page-course-details.html" class="read-more"><i class="fa fa-long-arrow-alt-right"></i></a>
+									<a href="page-course-details.html" class="read-more"><i class="bi bi-arrow-right"></i></a>
 								</div>
 							</div>
 						</div>
@@ -1238,7 +1238,7 @@
 								<li><i class="fa fa-comments"></i> 2 تعليقات</li>
 							</ul>
 							<h4 class="title"><a href="news-details.html">برامج تأشيرات دراسة حقوق الإنسان والديمقراطية</a></h4>
-							<a href="news-details.html" class="read-more">يقرأ أكثر <i class="fa fa-long-arrow-alt-right"></i></a>
+							<a href="news-details.html" class="read-more">يقرأ أكثر <i class="bi bi-arrow-right"></i></a>
 						</div>
 					</div>
 				</div>
@@ -1256,7 +1256,7 @@
 								<li><i class="fa fa-comments"></i> 2 تعليقات</li>
 							</ul>
 							<h4 class="title"><a href="news-details.html">برامج تأشيرات دراسة حقوق الإنسان والديمقراطية</a></h4>
-							<a href="news-details.html" class="read-more">يقرأ أكثر <i class="fa fa-long-arrow-alt-right"></i></a>
+							<a href="news-details.html" class="read-more">يقرأ أكثر <i class="bi bi-arrow-right"></i></a>
 						</div>
 					</div>
 				</div>
@@ -1274,7 +1274,7 @@
 								<li><i class="fa fa-comments"></i> 2 تعليقات</li>
 							</ul>
 							<h4 class="title"><a href="news-details.html">برامج تأشيرات دراسة حقوق الإنسان والديمقراطية</a></h4>
-							<a href="news-details.html" class="read-more">يقرأ أكثر <i class="fa fa-long-arrow-alt-right"></i></a>
+							<a href="news-details.html" class="read-more">يقرأ أكثر <i class="bi bi-arrow-right"></i></a>
 						</div>
 					</div>
 				</div>
@@ -1311,7 +1311,7 @@
 							<div class="text">66 شارع شارع بروكلين ، 600 <br>نيويورك ، الولايات المتحدة الأمريكية</div>
 							<ul class="contact-info">
 								<li><i class="fa fa-envelope"></i> <a href="mailto:needhelp@potisen.com">needhelp@company.com</a><br></li>
-								<li><i class="fa fa-phone-square"></i> <a href="tel:+926668880000">+92 666 888 0000</a><br></li>
+								<li><i class="bi bi-telephone"></i> <a href="tel:+926668880000">+92 666 888 0000</a><br></li>
 							</ul>
 						</div>
 					</div>
