--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
                                         <li><a href="#">Cyprus</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#">Citizenship & Passport</a></li>
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Partner</a></li>
-                                <li><a href="">Contact Us</a></li>
+                                <li><a href="citizenship.html">Citizenship & Passport</a></li>
+                                <li><a href="about-us.html">About Us</a></li>
+                                <li><a href="partner.html">Partner</a></li>
+                                <li><a href="contact-us.html">Contact Us</a></li>
                             </ul>
                         </nav>
                         <!-- Main Menu End-->
@@ -124,7 +124,7 @@
                                     consultation</span></a>
 
                             <!-- Mobile Nav toggler -->
-                            <div class="mobile-nav-toggler"><span class="icon lnr-icon-bars"></span></div>
+                            <div class="mobile-nav-toggler"><span class="bi bi-list"></span></div>
                         </div>
                     </div>
                 </div>
@@ -141,7 +141,7 @@
                         <div class="nav-logo"><a href="index.html"><img src="assets/img/main/dark-logo.png" alt=""
                                     title=""></a>
                         </div>
-                        <div class="close-btn"><i class="icon fa fa-times"></i></div>
+                        <div class="close-btn"><i class="bi bi-x-lg"></i></div>
                     </div>
 
                     <ul class="navigation clearfix">
@@ -221,7 +221,7 @@
                             </nav><!-- Main Menu End-->
 
                             <!--Mobile Navigation Toggler-->
-                            <div class="mobile-nav-toggler"><span class="icon lnr-icon-bars"></span></div>
+                            <div class="mobile-nav-toggler"><span class="bi bi-list"></span></div>
                         </div>
                     </div>
                 </div>
@@ -726,7 +726,7 @@
                                     <li><i class="bi bi-envelope"></i> <a
                                             href="mailto:info@northimmigration.com">info@northimmigration.com</a><br>
                                     </li>
-                                    <li><i class="fa fa-phone-square"></i> <a href="tel:+926668880000">+92 666 888
+                                    <li><i class="bi bi-telephone"></i> <a href="tel:+926668880000">+92 666 888
                                             0000</a><br></li>
                                 </ul>
                             </div>
@@ -826,8 +826,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/main-slider-script.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.fancybox.js"></script>
+    <script src="js/bootstrap.min.js"></script> 
     <script src="js/wow.js"></script>
     <script src="js/appear.js"></script>
     <script src="js/select2.min.js"></script>
