--- a/more.html
+++ b/more.html
@@ -26,14 +26,14 @@
                             <div class="image-box">
                                 <figure class="image"><a href="page-service-details.html"><img
                                             src="images/resource/service-1.jpg" alt=""></a></figure>
-                                <div class="icon-box"><i class="icon fa fa-graduation-cap"></i></div>
+                                <div class="icon-box"><i class="icon bi bi-arrow-right"></i></div>
                             </div>
                             <div class="content-box">
                                 <h5 class="title"><a href="page-service-details.html">Student Visa</a></h5>
                                 <div class="text">Fusce pretium sem ism the eget mattis. Nam hendrerit elit vel urna
                                     fermentum congue.</div>
                                 <a href="page-service-details.html" class="read-more">Read More <i
-                                        class="fa fa-long-arrow-alt-right"></i></a>
+                                        class="bi bi-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
@@ -51,7 +51,7 @@
                                 <div class="text">Fusce pretium sem ism the eget mattis. Nam hendrerit elit vel urna
                                     fermentum congue.</div>
                                 <a href="page-service-details.html" class="read-more">Read More <i
-                                        class="fa fa-long-arrow-alt-right"></i></a>
+                                        class="bi bi-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
@@ -69,7 +69,7 @@
                                 <div class="text">Fusce pretium sem ism the eget mattis. Nam hendrerit elit vel urna
                                     fermentum congue.</div>
                                 <a href="page-service-details.html" class="read-more">Read More <i
-                                        class="fa fa-long-arrow-alt-right"></i></a>
+                                        class="bi bi-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
@@ -224,7 +224,7 @@
                         <!-- Counter block-->
                         <div class="counter-block col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
                             <div class="inner">
-                                <i class="icon flaticon-passport-16"></i>
+                                <i class="icon icon bi bi-pass-fill"></i>
                                 <div class="count-box"><span class="count-text" data-speed="3000"
                                         data-stop="30">0</span>+
                                 </div>
@@ -290,7 +290,7 @@
                                 <span class="sub-title">Benefit 01</span>
                                 <h4 class="title">Direct Online Interviews</h4>
                                 <a href="page-about.html" class="read-more"><i
-                                        class="fa fa-long-arrow-alt-right"></i></a>
+                                        class="bi bi-arrow-right"></i></a>
                             </div>
 
                             <div class="info-box">
@@ -298,15 +298,15 @@
                                 <span class="sub-title">Benefit 02</span>
                                 <h4 class="title">Quick & Easy Process</h4>
                                 <a href="page-about.html" class="read-more"><i
-                                        class="fa fa-long-arrow-alt-right"></i></a>
+                                        class="bi bi-arrow-right"></i></a>
                             </div>
 
                             <div class="info-box">
-                                <i class="icon flaticon-passport-16"></i>
+                                <i class="icon icon bi bi-pass-fill"></i>
                                 <span class="sub-title">Benefit 03</span>
                                 <h4 class="title">99% Visa Approvals</h4>
                                 <a href="page-about.html" class="read-more"><i
-                                        class="fa fa-long-arrow-alt-right"></i></a>
+                                        class="bi bi-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
@@ -365,7 +365,7 @@
                                 <h4 class="title"><a href="news-details.html">The Human Rights and Democracy Study Visa
                                         Programms</a></h4>
                                 <a href="news-details.html" class="read-more">Read More <i
-                                        class="fa fa-long-arrow-alt-right"></i></a>
+                                        class="bi bi-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
@@ -386,7 +386,7 @@
                                 <h4 class="title"><a href="news-details.html">The Human Rights and Democracy Study Visa
                                         Programms</a></h4>
                                 <a href="news-details.html" class="read-more">Read More <i
-                                        class="fa fa-long-arrow-alt-right"></i></a>
+                                        class="bi bi-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
@@ -407,7 +407,7 @@
                                 <h4 class="title"><a href="news-details.html">The Human Rights and Democracy Study Visa
                                         Programms</a></h4>
                                 <a href="news-details.html" class="read-more">Read More <i
-                                        class="fa fa-long-arrow-alt-right"></i></a>
+                                        class="bi bi-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
