--- a/index-rtl.html
+++ b/index-rtl.html
@@ -5,13 +5,13 @@
 <meta charset="utf-8">
 <title> </title>
 <!-- Stylesheets -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="assets/css/bootstrap.min.css" rel="stylesheet">
 <link href="plugins/revolution/css/settings.css" rel="stylesheet" type="text/css"><!-- REVOLUTION SETTINGS STYLES -->
 <link href="plugins/revolution/css/layers.css" rel="stylesheet" type="text/css"><!-- REVOLUTION LAYERS STYLES -->
 <link href="plugins/revolution/css/navigation.css" rel="stylesheet" type="text/css"><!-- REVOLUTION NAVIGATION STYLES -->
 
-<link href="css/style-rtl.css" rel="stylesheet">
-<link href="css/responsive.css" rel="stylesheet">
+<link href="assets/css/style-rtl.css" rel="stylesheet">
+<link href="assets/css/responsive.css" rel="stylesheet">
 
 <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 <link rel="icon" href="images/favicon.png" type="image/x-icon">
@@ -20,7 +20,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
-<!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
+<!--[if lt IE 9]><script src="assets/js/respond.js"></script><![endif]-->
 </head>
 
 <body class="rtl">
@@ -1412,8 +1412,8 @@
 <!-- Scroll To Top -->
 <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-up"></span></div>
 
-<script src="js/jquery.js"></script> 
-<script src="js/popper.min.js"></script>
+<script src="assets/js/jquery.js"></script> 
+<script src="assets/js/popper.min.js"></script>
 <!--Revolution Slider-->
 <script src="plugins/revolution/js/jquery.themepunch.revolution.min.js"></script>
 <script src="plugins/revolution/js/jquery.themepunch.tools.min.js"></script>
@@ -1426,14 +1426,14 @@
 <script src="plugins/revolution/js/extensions/revolution.extension.parallax.min.js"></script>
 <script src="plugins/revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
 <script src="plugins/revolution/js/extensions/revolution.extension.video.min.js"></script>
-<script src="js/main-slider-script.js"></script>
+<script src="assets/js/main-slider-script.js"></script>
 <!--Revolution Slider-->
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.fancybox.js"></script>
-<script src="js/wow.js"></script>
-<script src="js/appear.js"></script>
-<script src="js/select2.min.js"></script>
-<script src="js/owl.js"></script>
-<script src="js/script.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/js/jquery.fancybox.js"></script>
+<script src="assets/js/wow.js"></script>
+<script src="assets/js/appear.js"></script>
+<script src="assets/js/select2.min.js"></script>
+<script src="assets/js/owl.js"></script>
+<script src="assets/js/script.js"></script>
 </body>
 </html>
