--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>North Immigration | slogin</title>
+    <title>North Immigration | slogan</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
@@ -11,7 +11,7 @@
     <link href="assets/css/main/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
-    <link href="css/style.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/main/header.css" rel="stylesheet">
     <link href="assets/css/main/footer.css" rel="stylesheet">
     <link href="assets/css/main/responsive.css" rel="stylesheet">
@@ -823,15 +823,10 @@
     <!-- Scroll To Top -->
     <div class="scroll-to-top scroll-to-target" data-target="html"><i class="bi bi-caret-up-fill"></i></div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="js/jquery.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/main-slider-script.js"></script>
-    <script src="js/bootstrap.min.js"></script> 
-    <script src="js/wow.js"></script>
-    <script src="js/appear.js"></script>
-    <script src="js/select2.min.js"></script>
-    <script src="js/owl.js"></script>
-    <script src="js/script.js"></script>
+    <script src="assets/js/jquery.js"></script> 
+    <script src="assets/js/bootstrap.min.js"></script>  
+    <script src="assets/js/owl.js"></script>
+    <script src="assets/js/script.js"></script>
     <script src="assets/js/main.js"></script>
     <script>
         const swiper = new Swiper('.swiper', {
