--- a/contact-us.html
+++ b/contact-us.html
@@ -35,7 +35,7 @@
         <!-- Preloader -->
         <!-- <div class="preloader"></div> -->
 
-        <!-- Main Header-->
+       
         <header class="main-header header-style-one">
             <!-- Header Top -->
             <div class="header-top">
@@ -235,7 +235,7 @@
         <div class="title-outer">
             <h1 class="title">Contact Us</h1>
             <ul class="page-breadcrumb">
-                <li><a href="index.html">Home</a><i class="bi bi-caret-right-fill"></i></li> 
+                <li><a href="index.html">Home</a><i class="bi bi-caret-down-fill"></i></li> 
                 <li>Contact</li>
             </ul>
         </div>
@@ -476,7 +476,7 @@
 <script src="assets/js/main-slider-script.js"></script>
 <script src="assets/js/bootstrap.min.js"></script> 
 <script src="assets/js/wow.js"></script>
-<script src="assets/js/appear.js"></script>
+
 <script src="assets/js/select2.min.js"></script>
 <script src="assets/js/owl.js"></script>
 <script src="assets/js/script.js"></script>
