--- a/internal-page.html
+++ b/internal-page.html
@@ -32,8 +32,6 @@
 <body>
 
     <div class="page-wrapper">
-        <!-- Preloader -->
-        <!-- <div class="preloader"></div> -->
         <header class="main-header header-style-one">
             <!-- Header Top -->
             <div class="header-top">
@@ -225,12 +223,13 @@
                 </div>
             </div><!-- End Sticky Menu -->
         </header>
-        <section class="page-title" style="background-image: url(assets/img//internal-page/Dominica-Citizenship-by-Investment-e1670432158506.jpg);">
+        <section class="page-title"
+            style="background-image: url(assets/img//internal-page/Dominica-Citizenship-by-Investment-e1670432158506.jpg);">
             <div class="auto-container">
                 <div class="title-outer">
                     <h1 class="title">Visa Details</h1>
                     <ul class="page-breadcrumb">
-                        <li><a href="index.html">Home</a><i class="bi bi-caret-down-fill"></i></li> 
+                        <li><a href="index.html">Home</a><i class="bi bi-caret-down-fill"></i></li>
                         <li>Country</li>
                     </ul>
                 </div>
@@ -240,7 +239,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-5 col-md-12">
-                        <div class="country-details__img"> <img src="assets/img/internal-page/dominicapassport.webp" alt=""> </div>
+                        <div class="country-details__img"> <img src="assets/img/internal-page/dominicapassport.webp"
+                                alt=""> </div>
                     </div>
                     <div class="col-lg-7 col-md-12">
                         <div class="country-content">
@@ -273,97 +273,101 @@
                     </div>
                 </div>
             </div>
-        </section> 
+        </section>
         <section class="countries-section-three">
             <div class="anim-icons">
                 <span class="icon icon-object-1"></span>
             </div>
             <div class="outer-box">
                 <div class="auto-container">
-                    <!-- <div class="sec-title text-center">
-                        <span class="sub-title">Countries we offer</span>
-                        <h2>Countries We Support <br>for Immigration.</h2>
-                    </div> -->
-
-                    <!--  Countries Carousel -->
                     <div class="row">
-                        <!-- Country Block Three-->
                         <div class="country-block-three col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <div class="content">
-                                    <div class="flag"><img src="images/resource/flag-aus.jpg" alt=""></div>
+                                    <div class="flag"><img src="" alt=""></div>
                                     <h5 class="title">Good Character
                                         Clean Criminal Record
-                                        No Visa Refusals </h5> 
+                                        No Visa Refusals </h5>
                                 </div>
                             </div>
                         </div>
-
-                        <!-- Country Block Three-->
                         <div class="country-block-three col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <div class="content">
                                     <div class="flag"><img src="images/resource/flag-usa.jpg" alt=""></div>
                                     <h5 class="title"> Include Full Family
                                         Dependent Parents 65y +
-                                        Dependent Children to 30y</h5> 
+                                        Dependent Children to 30y</h5>
                                 </div>
                             </div>
                         </div>
-
-                        <!-- Country Block Three-->
                         <div class="country-block-three col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <div class="content">
                                     <div class="flag"><img src="images/resource/flag-dub.jpg" alt=""></div>
                                     <h5 class="title">No Minimum Stay
-                                        No Language Test</h5> 
+                                        No Language Test</h5>
                                 </div>
                             </div>
                         </div>
-
-                        <!-- Country Block Three-->
                         <div class="country-block-three col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <div class="content">
                                     <div class="flag"><img src="images/resource/flag-la.jpg" alt=""></div>
                                     <h5 class="title">ID & Proof of Funds
                                         Birth Certificate
-                                        Financial Records</h5> 
+                                        Financial Records</h5>
                                 </div>
                             </div>
                         </div>
-
-                        <!-- Country Block Three-->
                         <div class="country-block-three col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <div class="content">
                                     <div class="flag"><img src="images/resource/flag-in.jpg" alt=""></div>
                                     <h5 class="title">ID & Proof of Funds
                                         Birth Certificate
-                                        Financial Records</h5> 
+                                        Financial Records</h5>
                                 </div>
                             </div>
                         </div>
-
-                        <!-- Country Block Three-->
                         <div class="country-block-three col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <div class="content">
                                     <div class="flag"><img src="images/resource/flag-turkey.jpg" alt=""></div>
                                     <h5 class="title">ID & Proof of Funds
                                         Birth Certificate
-                                        Financial Records</h5> 
+                                        Financial Records</h5>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section> 
+        </section>
+        <section>
+            <div class="container">
+                <div class="block icon-items-list ">
+                    <div class="row pt-3 pb-3">
+                        <div class="list col-lg-3 col-md-3 col-sm-6 "> <span class="icon-dollar"></span>
+                            <p itemprop="name">From $100,000 Donation </p>
+                        </div>
+                        <div class="list col-lg-3 col-md-3 col-sm-6 "> <span class="icon-feature-house-alt"></span>
+                            <p itemprop="name">From $200,000 Real Estate </p>
+                        </div>
+                        <div class="list col-lg-3 col-md-3 col-sm-6 "> <span class="icon-feature-family"></span>
+                            <p itemprop="name">Full Family </p>
+                        </div>
+                        <div class="list col-lg-3 col-md-3 col-sm-6 "> <span class="icon-feature-passport"></span>
+                            <p itemprop="name">Dominica Visa Free Travel 153 Countries </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
         <section class="services-details">
             <div class="container">
-                <div class="row">  
+                <div class="row">
                     <div class="col-xl-12 col-lg-12">
                         <div class="services-details__content">
                             <img src="images/resource/service-details.jpg" alt="" />
@@ -425,7 +429,7 @@
                                     </div>
                                 </div>
                             </div>
-                      
+
                         </div>
                     </div>
                 </div>
